:sparkles: feat: update on swagger documentation
